$Id: NEWS,v 1.103 2001-05-21 20:48:52 flood Exp $

1.2.2 - CVS
---------------------------------
- Bug 1155 - HPUX portability cleanup
- Bug 1172 - Compiler clean for getopt code.
- Bug 1170 - Compiler cleanup for pr_fnmatch code.
- Bug 1169 - Better handling of DefaultRoot/DefaultChdir
- Bug 1168 - variable definitions moved from proftpd.h to main.c
- Bug 1160 - BSD root socket semantics needed for svr4.2mp;UX/4800
- Bug 1156 - USER command now takes an argument with spaces in it
- Bug 1152 - Off-by-one in the PassivePorts code
- Bug 1137 - NLST displayed hidden files

1.2.2rc2 - Released 04/20/2001
---------------------------------
The `AllowChmod' directive has been deprecated, and will not work
consistantly.  Use <Limit SITE_CHMOD> instead.

- Bug 1112 - Compilation fix for IRIX 6.2.
- Bug 1128 - Fixed possibled Linux sendfile() corruption issue.
- Bug 1093 - Checking for world writable log files and symlinks.
- Bug 1094 - AuthUserFile/AuthGroupFile disallow relative paths.
- Bug 1096 - Case sensitivity issues in config, better checking of
  RLimit* directive arguments.
- Bug 1090 - AllowFilter/DenyFilter now logs correctly.
- Bug 1119 - glibc-glob compilation issue on IRIX6.
- Bug 1090 - ExtendedLog should now report ALL events (even errors)

1.2.2rc1 - Released 03/24/2001
---------------------------------
- Bug 1085 - Better logging of "User is not a UserAlias" and "Can't find
  user."
- Bug 1043 - Fixed possible infinite loop in bandwidth throttling code.
- New RLimit* directives used to control resource usage on support platforms.
- Bug 1075 - Sub-contexts (<Directory>, etc) weren't being fully copied from
  <Global> to vhosts.
- Bug 1049 - New User/Groups weren't being seen after startup w/out a SIGHUP.
- Bug 1066 - new GNU glob() and friends, which properly limits recursion and
  avoids DoS issues.  Built-in glob support is now always compiled in to
  proftpd regardless of libc support on build platform.